# NWIN-OS

./: .gitignore  CONTEXTO_KERNEL.md  Cargo.toml  README.md  linker.ld
.cargo/: config.toml
esp/: NvVars  initramfs.tar  limine.conf
scripts/: build.bat  rung_debug.bat
src/: main.rs
src/core/: cpu.rs  error.rs  gdt.rs  idt.rs  mod.rs  panic.rs  sync.rs  syscall.rs
src/drivers/: mod.rs
src/drivers/block/: mod.rs
src/drivers/block/ahci/: mod.rs  port.rs  regs.rs
src/drivers/bus/: mod.rs  pci.rs
src/drivers/char/: mod.rs  serial.rs
src/drivers/display/: fb.rs  mod.rs  tty.rs
src/drivers/input/: keyboard.rs  mod.rs
src/drivers/timer/: mod.rs  pit.rs
src/fs/: fd.rs  manager.rs  mod.rs  vfs.rs
src/fs/ext4/: block_group.rs  dir_entry.rs  extents.rs  inode.rs  mod.rs  super_block.rs  volume.rs
src/fs/fat/: bpb.rs  mod.rs  volume.rs
src/fs/partition/: mbr.rs  mod.rs
src/mm/: allocator.rs  memory.rs  mod.rs
src/task/: elf.rs  mod.rs  scheduler.rs  task.rs  task_manager.rs  usermode.rs
tests/disk-images/: README.md
tests/programs/: h.elf  h10.elf  h11.elf  h6.elf  h9.elf
userspace/: test_mem.rs
